# face_analysis

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  face_db.py  face_engine.py  main.py  models.py
backend/app/routers/: analyze.py  detect.py  recognize.py  swap.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: CameraCapture.tsx  FaceCanvas.tsx  ImageUploader.tsx  LiveSearch.tsx  ResultPanel.tsx
frontend/src/pages/: AnalyzePage.tsx  DetectPage.tsx  RecognizePage.tsx  SwapPage.tsx
